<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Welcome"
    android:background="@color/black">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338">

    </TextView>

    <Button
        android:id="@+id/letsGo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/Go"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/my_cart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/my_cart"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/letsGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/signout_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/sign_out"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/my_cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>