<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookDetails"
    android:orientation="vertical"
    android:weightSum="3"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/header"
        android:text="@string/Aboutbook"
        android:gravity="center"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"/>

    <!-- Divider Green Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:id="@+id/divider"
        android:background="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"/>


    <TextView
        android:id="@+id/details_title"
        android:layout_marginTop="10dp"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="Title: "
        android:layout_marginStart="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/details_description"
        android:layout_marginTop="20dp"
        android:layout_weight="0.1"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description: "
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        />

    <!-- Divider Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/details_isbn"
        android:layout_marginTop="20dp"
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ISBN: "
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        />

    <!-- Divider Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/details_price"
        android:layout_marginTop="20dp"
        android:layout_weight="0.1"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Price: "
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        />

    <!-- Divider Line -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <Button
        android:id="@+id/add_to_cart"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:width="300dp"
        android:backgroundTint="@color/green"
        android:text="@string/add_to_cart"
        android:textSize="20sp" />

<!--    <Button-->
<!--        android:id="@+id/edit_product"-->
<!--        android:layout_width="129dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="200dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:width="300dp"-->
<!--        android:backgroundTint="@color/black"-->
<!--        android:text="@string/edit_this_book"-->
<!--        android:textSize="20sp" />-->

<!--    <Button-->
<!--        android:id="@+id/delete_product"-->
<!--        android:layout_width="116dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginBottom="30dp"-->
<!--        android:width="300dp"-->
<!--        android:backgroundTint="@color/red"-->
<!--        android:text="@string/delete_this_book"-->
<!--        android:textSize="20sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/edit_product"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/lightBlack"
            android:text="@string/edit_this_book"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_product"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/delete_this_book"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>